--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,5 +1,5 @@
 <main class="main">
-  <h1>Bem-vindo à Loja de Outdoor!</h1>
+  <h1>UNA OUTDOOR</h1>
   <app-order-list></app-order-list>
 </main>
 
