--- a/src/app/app.css
+++ b/src/app/app.css
@@ -1,8 +1,17 @@
 :host {
   display: block;
-  background-color: #f0f2f5;
   min-height: 100vh;
 }
 .main {
   text-align: center;
+  padding-top: 20px;
+}
+
+.main h1, h1 {
+  margin-top: 0;
+  font-family: 'Montserrat', sans-serif;
+  
+  color: #000000;
+  letter-spacing: 2px;
+  text-transform: uppercase;
 }
